fixed nav links lead-in alignment removed focus state outline
added input focus on contact nav link

--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,8 @@ input,
 textarea {
   cursor: none;
 }
+input:focus,
+textarea:focus,
 button:focus {
   outline: none;
 }
